# -*- mode: org -*-
* v4.3.7    UNRELEASED

- When running ~git~ for side-effects and that signals an error, we
  did not augment the error message to inform the user that the full
  output can be found in the process buffer.  When the error is not
  signaled, we did already append that hint to the message.  Also
  added a new option, ~magit-show-process-buffer-hint~, for people who
  are already aware of the process buffer and would like to avoid
  the noisy reminder.  #5396

Bugfixes:

- Some instructions inserted into rebase sequence buffers were not
  prefixed with ~comment-start~, instead # was used unconditionally.
  #5388

- Fixed a regression in v4.3.6, which caused a conflict between the
  overlays used for section highlighting and section selection, if
  both of these faces relied on the same face property (likely the
  foreground color).  #5389

- Hunks could remain painted as selected when navigating away.  #5393

- The log arguments "--grep" and "--graph" are no longer mutually
  exclusive, but we still dropped the latter when the former was
  used. #5391

- ~magit-save-repository-buffers~ errored on older Emacs releases,
  if the value of the variable by the same name is ~ask~.  #5399

* v4.3.6    2025-06-01

- Generalized and heavily refactored the code, previously used only to
  highlight diff-related sections and to paint hunks, so that it can
  be used for other sections as well.  The new implementation should
  also be a bit faster.  cfe4faaaf6^..c556fee1bd

- A single-section selection now requires a non-empty region.
  6c4c16942a

- When creating a stash, "On <branch>: " is now offered as a second
  future history element.  75c6191999, 9b81df36b4

- Added new commands ~git-rebase-drop~, ~git-rebase-alter~ and
  ~git-rebase-squish~.  479c467080, 9674c4755a

Bugfixes:

- Fixed issues concerning date handling in log margins.  #5373

- The list of rebase actions in the status buffer could contain